--- a/src/app/room/room.component.css
+++ b/src/app/room/room.component.css
@@ -202,12 +202,11 @@ input[type=number]::-webkit-outer-spin-button {
 
 .transparenz {
   position: absolute;
-  margin-top: -350px;
-  margin-bottom: 100px;
+
   width: 100%;
   height: 1467px;
   z-index: 9;
-  background-color: #000;
+  background-color: #fff;
   opacity: .8;
 }
 
