--- a/src/app/group-table-confirmed/group-table-confirmed.component.html
+++ b/src/app/group-table-confirmed/group-table-confirmed.component.html
@@ -99,19 +99,19 @@
             <div class="form-check">
               <input (change)="regulateProperties('besideWindow')" class="form-check-input" type="checkbox" value="" id="besideWindow">
               <label class="form-check-label" for="besideWindow">
-                Fensternähe
+                Fensternaehe
               </label>
             </div>
             <div class="form-check">
               <input (change)="regulateProperties('besideDoor')" class="form-check-input" type="checkbox" value="" id="besideDoor" >
               <label class="form-check-label" for="besideDoor">
-                Türnähe
+                Tuernaehe
               </label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="checkbox" value="" id="besideBoard" >
               <label class="form-check-label" for="besideBoard">
-                Tafelnähe
+                Tafelnaehe
               </label>
             </div>
             <div class="form-check">
