--- a/src/app/person-properties/person-properties.component.html
+++ b/src/app/person-properties/person-properties.component.html
@@ -36,19 +36,19 @@
             <div class="form-check">
               <input (change)="regulateProperties('besideWindow')" class="form-check-input" type="checkbox" value="" id="besideWindow">
               <label class="form-check-label" for="besideWindow">
-                Fensternaehe
+                Fensternähe
               </label>
             </div>
             <div class="form-check">
               <input (change)="regulateProperties('besideDoor')" class="form-check-input" type="checkbox" value="" id="besideDoor" >
               <label class="form-check-label" for="besideDoor">
-                Tuernaehe
+                Türnähe
               </label>
             </div>
             <div class="form-check">
               <input (change)="regulateProperties('besideBoard')"  class="form-check-input" type="checkbox" value="" id="besideBoard" >
               <label class="form-check-label" for="besideBoard">
-                Tafelnaehe
+                Tafelnähe
               </label>
             </div>
             <div class="form-check">
