Fix von einigen Rechtschreibfehlern und Formulierungen der Benutzeroberfläche

--- a/src/app/group-table/group-table.component.html
+++ b/src/app/group-table/group-table.component.html
@@ -46,7 +46,7 @@
 </div>
   <div class="container position-relative h-100 p-lg-4">
     <div class="position-absolute top-left ps-4">
-      <button  type="button" class="btn btn-outline-dark btn-light" (click)="Cancel()">Abrechen</button>
+      <button  type="button" class="btn btn-outline-dark btn-light" (click)="Cancel()">Abbrechen</button>
     </div>
     <div class="position-absolute top-right pe-4">
       <button  type="button" class="btn btn-outline-dark btn-light" (click)="confirmList()">Weiter</button>
