--- a/src/app/import-csv/import-csv.component.html
+++ b/src/app/import-csv/import-csv.component.html
@@ -1,7 +1,7 @@
 <div class="modal fade" id="ModalBoxImport" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content"><small id="FileTypHelp1" class="form-text text-secondary" style="margin-left: 10px">gruppe importieren</small><div class="modal-header">
-      <h5 class="modal-title" id="exampleModalLongTitle">Eine gültiges Passwort eingeben und Passende verschlüsselte Datei auswählen!</h5>
+      <h5 class="modal-title" id="exampleModalLongTitle">Eine gültiges Passwort eingeben und gültige verschlüsselte Datei auswählen!</h5>
       <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="closeModal()">
         <span aria-hidden="true">&times;</span>
       </button>
@@ -32,7 +32,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal"    (click)="closeModal()">Schließen</button>
-        <input type="button" class="btn btn-outline-dark"(click)="Import()" value="Beschtätigen und Importieren">
+        <input type="button" class="btn btn-outline-dark"(click)="Import()" value="Bestätigen und Importieren">
       </div>
     </div>
   </div>
