--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -413,7 +413,7 @@
       <div class="objToolbox">
 
         <div class="hideStep3" style="height: 30px;">
-          <label class="label-left-dark label-left-title">Türe</label>
+          <label class="label-left-dark label-left-title">Türen</label>
         </div>
         <div style="height: 30px;">
           <label class="label-left-dark label-left-title">{{elementsNumber[1].number}}</label>
