--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -17,7 +17,7 @@
         </button>
       </div>
       <div class="modal-body">
-        Sie werden Ihre aktuelle Daten verloren!
+        Aktuelle Daten werden verloren gehen!
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-dark" (click)="confirmModalText()">OK</button>
